Update pom configuration so the project run with mvn javafx:run and is correctly setup in IntelliJ