@@ -51,6 +51,7 @@
                     <target>27</target>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
                         <arg>--add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
                         <arg>--add-exports=java.base/jdk.internal.value=ALL-UNNAMED</arg>
                         <arg>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
@@ -69,8 +70,12 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
+                    <mainClass>com.codesimcoe.mandelbrotfx.MandelbrotApp</mainClass>
                     <options>
                         <option>--enable-preview</option>
+                        <option>--add-modules=jdk.incubator.vector</option>
+                        <option>--enable-native-access=javafx.graphics</option>
+                        <option>--enable-native-access=javafx.media</option>
                     </options>
                 </configuration>
             </plugin>
